<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/menu_linear_view"
            android:title="@string/linear"
            android:icon="@drawable/ic_list_linear"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/menu_grid_view"
            android:title="@string/grid"
            android:icon="@drawable/ic_list_grid"
            app:showAsAction="always"/>
    </group>
</menu>