...
            android:contentDescription="@string/photo"
            tools:src="@tools:sample/avatars"
            />

        <TextView
            style="@style/TextContent.Title"
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/iv_photo"
            app:layout_constraintTop_toTopOf="@id/iv_photo"
...
